# tachyon-vm

./: .gitignore  LICENSE  README.md
compiler/: README.md  complete-test.sh  main.py  requirements.txt  vm-test.sh
compiler/compile/: byte_pack.py  code_writer.py  codegen.py  compiler.py  context.py  errors.py  local_vars.py  opcodes.py  operation.py  record.py  symbols.py  type_check.py
compiler/grammar/: tachyon_grammar.txt
compiler/output/: array_concat.tycode  array_length.tycode  array_length2.tycode  binary_op_test_1.tycode  bitwise_ops.tycode  if_example.tycode  loop_test.tycode  prime_test.tycode  quicksort.tycode  readfile1.tycode  record_test2.tycode  record_test3.tycode  recursion.tycode  seekfile1.tycode  simple_test.tycode  simple_test2.tycode  simple_test3.tycode  square_root.tycode  writefile1.tycode
compiler/programs/: array_concat.ty  array_length.ty  array_length2.ty  array_test1.ty  binary_op_test_1.ty  bitwise_ops.ty  countdown.ty  for_loop_test.ty  functional.ty  if_example.ty  int_test.ty  loop_test.ty  math1.ty  nested_loops.ty  prime_test.ty  quicksort.ty  test1.ty  (+17 more)
virtual_machine/: .gitignore  CMakeLists.txt  README.md  complete-vm-test.sh  run-valgrind.sh  workspace.code-workspace
virtual_machine/src/: datatypes.h  gc.c  gc.h  log.c  log.h  main.c  memory.c  memory.h  program_reader.c  program_reader.h  topcode.c  topcode.h  ty_math.c  ty_math.h  vm.c  vm.h  vm_binary_operations.c  vm_binary_operations.h  vm_cast_operations.c  vm_cast_operations.h  vm_defs.h  vm_file_operations.c  vm_file_operations.h  vm_operations.c  vm_operations.h
(+5 files in other folders)
